[package]
name = "rp2xxx-pio-1-wire-master-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.0"
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.1"
embassy-executor = { git="https://github.com/embassy-rs/embassy.git", rev="3b74732", features = ["defmt", "task-arena-size-4096", "arch-cortex-m", "executor-thread"] }
embassy-rp = { git="https://github.com/embassy-rs/embassy.git", rev="3b74732", features = ["defmt", "rp2040", "time-driver"] }
embassy-time = { git="https://github.com/embassy-rs/embassy.git", rev="3b74732", features = ["defmt", "defmt-timestamp-uptime"] }
fixed = "1.28.0"
heapless = { version = "0.8.0", features = ["defmt-03"] }
pio = { git = "https://github.com/rp-rs/pio-rs", rev = "fa586448b0b223217eec8c92c19fe6823dd04cc4" }
pio-proc = { git = "https://github.com/rp-rs/pio-rs", rev = "fa586448b0b223217eec8c92c19fe6823dd04cc4" }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core" ] }
panic-probe = { version = "0.3.2", default-features = false, features = ["defmt-error", "print-defmt"] }
