[package]
name = "rp2xxx-pio-1-wire-master-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
critical-section = "1.2"
defmt = "0.3"
embassy-executor = { path = "../embassy-swork/embassy-executor", features = ["defmt", "task-arena-size-4096", "arch-cortex-m", "executor-thread" ] }  # git="https://github.com/embassy-rs/embassy.git", rev="3b74732",
embassy-rp = { path = "../embassy-swork/embassy-rp", features = ["defmt", "rp2040", "time-driver"] }
embassy-time = { path = "../embassy-swork/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
fixed = "1.28.0"
heapless = { version = "0.8.0", features = ["defmt-03"] }
pio = { git = "https://github.com/rp-rs/pio-rs", rev = "fa586448b0b223217eec8c92c19fe6823dd04cc4" }
pio-proc = { git = "https://github.com/rp-rs/pio-rs", rev = "fa586448b0b223217eec8c92c19fe6823dd04cc4" }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core" ] }
static_cell = "2.1.0"
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
rtt-target = { version = "0.6", features = ["defmt"] }
defmt-rtt = "0.4.1"

[dev-dependencies]
panic-halt = "1.0.0"

[lib]
test = false  # "Please, 'cargo test', don't look for tests in src/lib.rs."

[[bin]]
name = "demo"
harness = false  # "Please, 'cargo test', ignore src/bin/demo.rs when using the default test harness.
