[package]
name = "embassy_rp2xxx_pio_1_wire_master"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7"
critical-section = "1.2"
defmt = "0.3"
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-4096", "arch-cortex-m", "executor-thread" ] }
embassy-rp = { version = "0.3.0", features = ["defmt", "rp2040", "time-driver"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
fixed = "1.28.0"
heapless = { version = "0.8.0", features = ["defmt-03"] }
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core" ] }
static_cell = "2.1.0"
portable-atomic = { version = "1.10.0", features = ["critical-section"] }
rtt-target = { version = "0.6", features = ["defmt"] }
defmt-rtt = "0.4.1"

[dev-dependencies]
panic-halt = "1.0.0"

[lib]
test = false  # "Please, 'cargo test', don't look for tests in src/lib.rs."

[[bin]]
name = "demo"
harness = false  # "Please, 'cargo test', ignore src/bin/demo.rs when using the default test harness.

[patch.crates-io]
embassy-time = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
cyw43-pio = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-net-tuntap = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
cyw43 = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-net-wiznet = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-boot-nrf = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-net = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-boot-rp = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-nrf = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-boot-stm32 = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-nxp = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-boot = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-embedded-hal = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-stm32-wpan = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-executor-macros = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-stm32 = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-executor = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-sync = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-futures = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-time-driver = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-hal-internal = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-time-queue-utils = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-net-adin1110 = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-net-driver-channel = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-usb-dfu = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-net-driver = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-usb-driver = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-net-enc28j60 = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-usb-logger = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-net-esp-hosted = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-usb-synopsys-otg = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-net-nrf91 = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-usb = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
embassy-net-ppp = { git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }

embassy-rp = { version = "0.3.0", git = "https://github.com/swork/embassy-swork/", branch = "swork-add-pio-functions" }
